[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Dialogue_Box.png" type="Texture" id=1]
[ext_resource path="res://Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/BalsamiqSans-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Player/TextboxDisplay.gd" type="Script" id=4]
[ext_resource path="res://Assets/Dialogue_Icons.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="TextboxDisplay" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Textbox" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectDialogue" type="NinePatchRect" parent="Textbox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 132.0
margin_top = 400.0
margin_right = 852.0
margin_bottom = 528.0
rect_min_size = Vector2( 720, 128 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 32, 64, 32 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Textbox/RectDialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox/RectDialogue/MarginContainer"]
margin_right = 576.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 1 )
text = "This is a textbox that holds some text!"

[node name="RectName" type="NinePatchRect" parent="Textbox"]
margin_left = 137.755
margin_top = 414.388
margin_right = 617.755
margin_bottom = 454.388
rect_min_size = Vector2( 256, 40 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 32 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Textbox/RectName"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox/RectName/MarginContainer"]
margin_right = 448.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 2 )
text = "Name Namerson"
scroll_active = false

[node name="RectIcon" type="NinePatchRect" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 163.0
margin_top = 461.75
margin_right = 219.0
margin_bottom = 517.75
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
region_rect = Rect2( 64, 0, 64, 64 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Textbox/RectIcon"]
texture = ExtResource( 5 )
centered = false
hframes = 4
vframes = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
